--- a/Sara_02092024.ipynb
+++ b/Sara_02092024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d0df20a1",
+   "id": "7561723e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cd04e410",
+   "id": "602d6da9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "17c52ad8",
+   "id": "7b58f2bf",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7e4097d0",
+   "id": "25c91e4d",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6f6aca3d",
+   "id": "702330ae",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f606da",
+   "id": "1ee2fd0c",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -98,14 +98,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "9c9357ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter your name: Sara\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Sara'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input('enter your name: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c5fc0e10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter your name: Sara\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=input (\"enter your name: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5c98f117",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Sara!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello, ' +name + '!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3ea7273d",
+   "id": "39f5bde5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "input('enter your name: ')\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
