--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5fd1b441",
+   "id": "fbf94f27",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a65a8cf3",
+   "id": "768e886d",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "51cc4766",
+   "id": "8d54b7bf",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ef6755b4",
+   "id": "1cec33af",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "be7823c7",
+   "id": "9390af7b",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6e59543",
+   "id": "d1f47250",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c3233c4b",
+   "id": "bbd32bd6",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c18f4c4a",
+   "id": "76736267",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0eb077dd",
+   "id": "44e33ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "070a3912",
+   "id": "55ee1039",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2fb8eef",
+   "id": "2e991435",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -203,8 +203,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "bd206b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your nameShraddha \n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cdc1c84b",
+   "id": "07332394",
    "metadata": {},
    "outputs": [],
    "source": []
