--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c8b1777e",
+   "id": "29e5b374",
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "c58b18c8",
+   "execution_count": 27,
+   "id": "30220761",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Dima\n"
+      "name: Dmitrii\n"
      ]
     }
    ],
@@ -79,8 +79,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "9fda0784",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, Dmitrii!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('hello, ' + name + '!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bb6e9837",
+   "id": "531ba02e",
    "metadata": {},
    "outputs": [],
    "source": []
