--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0e972c6a",
+   "id": "5570d0af",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "32f8e2fc",
+   "id": "da109aea",
    "metadata": {},
    "outputs": [
     {
@@ -49,8 +49,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "7ae51204",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write your name :Fatos \n"
+     ]
+    }
+   ],
+   "source": [
+    "name= input(\"Write your name :\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c0abdb39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fatos \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1a4e5b98",
+   "id": "dca37848",
    "metadata": {},
    "outputs": [],
    "source": []
