--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "48d51a07",
+   "id": "49b9f8b8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0bc18d19",
+   "id": "07aadbeb",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "514e43cd",
+   "id": "a074f93f",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "512ed081",
+   "id": "bdfa6607",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89228ca5",
+   "id": "68273d7f",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b2deb12",
+   "id": "65bab49c",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7412e08",
+   "id": "6d0d6b54",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c61d0c3e",
+   "id": "16eac015",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3a2a354e",
+   "id": "90c1b30f",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4ead41ce",
+   "id": "62234418",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "528d9cfe",
+   "id": "e49ee2fe",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "650a709f",
+   "id": "eacb0111",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b50d643c",
+   "id": "0b0ba5c8",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bc6cbc55",
+   "id": "8f013d54",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec85af57",
+   "id": "c7fc7c39",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "94a041ad",
+   "id": "1a593673",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f23f394f",
+   "id": "406ae202",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1b4c140d",
+   "id": "adeb944a",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dc786aed",
+   "id": "c6958306",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5def0fa",
+   "id": "6090b808",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c70a364f",
+   "id": "beb3a3c0",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3717c86f",
+   "id": "9764c697",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a2bda39b",
+   "id": "9c5e1b2f",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1550b6ec",
+   "id": "4f098e54",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9862e522",
+   "id": "68fcbbe2",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7f04246b",
+   "id": "b94d8252",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a702b7e",
+   "id": "84b91a50",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1bdf8bff",
+   "id": "0f2c1c46",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d1b3e4",
+   "id": "389626fa",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "00fc9f5f",
+   "id": "a6491384",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "05ca0283",
+   "id": "d40aa29e",
    "metadata": {},
    "outputs": [
     {
@@ -660,15 +660,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "fee51af6",
+   "execution_count": 25,
+   "id": "872b55e8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, Reuven!\n"
+      "Hello, someone you do not know!\n"
      ]
     }
    ],
@@ -678,8 +678,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "5615e815",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 10\n",
+      "Enter a second number: 15\n",
+      "1015\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input always returns a string!\n",
+    "\n",
+    "x = input('Enter a number: ')\n",
+    "y = input('Enter a second number: ')\n",
+    "print(x+y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e72a537e",
+   "metadata": {},
+   "source": [
+    "# Exercise: Multi-part greeting\n",
+    "\n",
+    "1. Ask the user to enter their name, and assign to `name`.\n",
+    "2. Ask the user to enter their city, and assign to `city`.\n",
+    "3. Print a nice greeting that includes both of these."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c2c118ef",
+   "id": "c3391abd",
    "metadata": {},
    "outputs": [],
    "source": []
