--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "28a64011",
+   "id": "48090165",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "034fc835",
+   "id": "032dd800",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f8be234",
+   "id": "0830f953",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60277e12",
+   "id": "5ce528a4",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a7968fa8",
+   "id": "6372b2b5",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e5c75998",
+   "id": "6331b197",
    "metadata": {},
    "outputs": [
     {
@@ -92,10 +92,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1913d0c",
+   "id": "ec24358d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = inout('Enter')"
+   ]
   }
  ],
  "metadata": {
