--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dbd592f0",
+   "id": "92be8a90",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "637526cc",
+   "id": "7c7ec422",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d69c5ad9",
+   "id": "1f1473dd",
    "metadata": {},
    "outputs": [
     {
@@ -61,10 +61,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02377a03",
+   "id": "2f303f8f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input(\"enter your name\")\n",
+    "city = input (\"enter your city\")\n",
+    "print ()"
+   ]
   }
  ],
  "metadata": {
