--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "db6e65c6",
+   "id": "f8e370cd",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fc3775b5",
+   "id": "e1ddac70",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fdc36fdf",
+   "id": "fe726de3",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "429b312d",
+   "id": "41552789",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "440e9dcb",
+   "id": "f30a317d",
    "metadata": {},
    "outputs": [
     {
@@ -88,10 +88,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdf30d33",
+   "id": "2ee16373",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input (E)"
+   ]
   }
  ],
  "metadata": {
