--- a/Sara_02092024.ipynb
+++ b/Sara_02092024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7561723e",
+   "id": "d412aca5",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "602d6da9",
+   "id": "75699e5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7b58f2bf",
+   "id": "73c020a1",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "25c91e4d",
+   "id": "5747af0b",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "702330ae",
+   "id": "7acf72f8",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ee2fd0c",
+   "id": "d8ea0476",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9c9357ea",
+   "id": "f6700c5b",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c5fc0e10",
+   "id": "e19c4a75",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5c98f117",
+   "id": "c8ab85cc",
    "metadata": {},
    "outputs": [
     {
@@ -162,11 +162,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "9181440f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 10\n",
+      "Enter a second number: 15\n",
+      "1015\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=input (\"Enter a number: \")\n",
+    "y=input ('Enter a second number: ')\n",
+    "print (x+y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "39f5bde5",
+   "id": "88d4128b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x=input (\"Enter your name: \")\n",
+    "y=input ('What is your city: ')\n",
+    "print (\"Hello, dear \" + x + \"fr\"+y)"
+   ]
   }
  ],
  "metadata": {
