--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fbf94f27",
+   "id": "6dd95ad4",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "768e886d",
+   "id": "90b78450",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8d54b7bf",
+   "id": "60f44bfb",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1cec33af",
+   "id": "0d1d8aae",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9390af7b",
+   "id": "7abf5328",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d1f47250",
+   "id": "ebf850af",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bbd32bd6",
+   "id": "19c343da",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "76736267",
+   "id": "2b958096",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "44e33ab1",
+   "id": "3eeae36d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "55ee1039",
+   "id": "a1ce3cb5",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e991435",
+   "id": "1c45c07b",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -203,29 +203,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "bd206b3c",
+   "execution_count": 12,
+   "id": "5024eb2b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your nameShraddha \n"
+      "Enter your nameshraddha\n",
+      "name\n"
      ]
     }
    ],
    "source": [
-    "name = input('Enter your name')"
+    "name = input('Enter your name')\n",
+    "print('name')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07332394",
+   "id": "1a6229bf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input('Enter your name')\n",
+    "city = input('Enter your city')\n"
+   ]
   }
  ],
  "metadata": {
