--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d51f199",
+   "id": "13085db7",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0b4f833b",
+   "id": "1bb93ddf",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d846899b",
+   "id": "6a034d4c",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "79bfbe46",
+   "id": "ec7ff344",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "49155e9e",
+   "id": "df7ba82f",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c470bee4",
+   "id": "736d95c3",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aa04603a",
+   "id": "565de50e",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5cbcd16",
+   "id": "74b9ba2f",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,10 +146,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13f0dd05",
+   "id": "822ecfe6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "city_name = input('')"
+   ]
   }
  ],
  "metadata": {
