--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "29e5b374",
+   "id": "b267a767",
    "metadata": {},
    "outputs": [
     {
@@ -61,26 +61,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "30220761",
+   "execution_count": 29,
+   "id": "af11f3e2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name: Dmitrii\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (1152699051.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[29], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    print ('hello, ' + name + 'from ' + city '!')\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
      ]
     }
    ],
    "source": [
-    "name = input ('name: ')"
+    "name = input ('Name: ')\n",
+    "city = input ('City:')\n",
+    "print ('hello, ' + name + 'from ' + city '!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9fda0784",
+   "id": "64aaa9cc",
    "metadata": {},
    "outputs": [
     {
@@ -91,14 +94,12 @@
      ]
     }
    ],
-   "source": [
-    "print ('hello, ' + name + '!')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "531ba02e",
+   "id": "c903f65f",
    "metadata": {},
    "outputs": [],
    "source": []
