--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5570d0af",
+   "id": "002b6965",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "da109aea",
+   "id": "86409d64",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7ae51204",
+   "id": "6b408a60",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c0abdb39",
+   "id": "909252f1",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dca37848",
+   "id": "413ed499",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name= input(\"Fill in your name\")\n",
+    "city= input(\"City you live in\")\n",
+    "print=(\"Welcome \" + name + \"from \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f64e5b7",
    "metadata": {},
    "outputs": [],
    "source": []
