--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "239bee35",
+   "id": "f7c2b6d6",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -77,11 +77,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "39f6db14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to company ABC , we are happy to have you here , what is your nameAsma alnuairat\n"
+     ]
+    }
+   ],
+   "source": [
+    "name= input('welcome to company ABC , we are happy to have you here , what is your name ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ada79eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "where are you from Amman\n"
+     ]
+    }
+   ],
+   "source": [
+    "city=input(\"where are you from \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0ad84fee",
+   "id": "37e3b29a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p"
+   ]
   }
  ],
  "metadata": {
