--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "48090165",
+   "id": "ed3eb68b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "032dd800",
+   "id": "77685e62",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0830f953",
+   "id": "865b6460",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce528a4",
+   "id": "f8112c21",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6372b2b5",
+   "id": "3070cc95",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6331b197",
+   "id": "f496f47c",
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +91,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "f11bb13b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your nameMatt\n",
+      "Enter your cityWroclaw\n",
+      "Hello Matt from Wroclaw!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name')\n",
+    "city = input('Enter your city')\n",
+    "print('Hello ' + name + ' from ' + city + '!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ec24358d",
+   "id": "dce7ce10",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name = inout('Enter')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
