--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92be8a90",
+   "id": "f40f22e0",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7c7ec422",
+   "id": "3b65339a",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1f1473dd",
+   "id": "fd84bd41",
    "metadata": {},
    "outputs": [
     {
@@ -60,15 +60,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2f303f8f",
+   "execution_count": 5,
+   "id": "92c50e23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter your nameJoe\n",
+      "enter your cityVancouver\n",
+      "Hello Joe! Welcome from Vancouver!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"enter your name\")\n",
     "city = input (\"enter your city\")\n",
-    "print ()"
+    "print (\"Hello \" + name + \"! Welcome from \" + city + \"!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dbf6d43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
