--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f8e370cd",
+   "id": "7ccbe42c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e1ddac70",
+   "id": "524c0639",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fe726de3",
+   "id": "37eb1593",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41552789",
+   "id": "aaa3ee67",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f30a317d",
+   "id": "a0eb680e",
    "metadata": {},
    "outputs": [
     {
@@ -87,13 +87,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "90efd933",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name Przemo\n",
+      "Enter your cityZielonkia\n",
+      "Hello Przemo from Zielonkia, nice ot meet you !!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input (\"Enter your name : \")\n",
+    "city = input('Enter your city : ')\n",
+    "print(\"Hello \"+name+' from '+city+', nice ot meet you !!!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2ee16373",
+   "id": "f31dafb3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name = input (E)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
