--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d412aca5",
+   "id": "beed1682",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "75699e5d",
+   "id": "7847cb77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "73c020a1",
+   "id": "4dfec859",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5747af0b",
+   "id": "c3cc8b0a",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7acf72f8",
+   "id": "b2e0b4f0",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8ea0476",
+   "id": "ca44c4d8",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f6700c5b",
+   "id": "c6667253",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e19c4a75",
+   "id": "2f534c3d",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c8ab85cc",
+   "id": "43ecad55",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9181440f",
+   "id": "47e87eea",
    "metadata": {},
    "outputs": [
     {
@@ -184,15 +184,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "88d4128b",
+   "execution_count": 13,
+   "id": "f2e9476b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Sara\n",
+      "What is your city: Krakow\n",
+      "Hello, dear Sara from Krakow!\n"
+     ]
+    }
+   ],
    "source": [
     "x=input (\"Enter your name: \")\n",
     "y=input ('What is your city: ')\n",
-    "print (\"Hello, dear \" + x + \"fr\"+y)"
+    "print (\"Hello, dear \" + x + \" from \" + y + \"!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7e45504",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
