--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5e0528f8",
+   "id": "9bde5169",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "571fb851",
+   "id": "ccff50fe",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3a94beb0",
+   "id": "be17364a",
    "metadata": {},
    "outputs": [
     {
@@ -60,10 +60,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e234dc9c",
+   "id": "d490fff1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name=input (enter a name: ')\n",
+    "city=input (enter a city: ')"
+   ]
   }
  ],
  "metadata": {
