--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "13085db7",
+   "id": "49350d19",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1bb93ddf",
+   "id": "ee74cb29",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a034d4c",
+   "id": "aa0b16e5",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ec7ff344",
+   "id": "1f658f1c",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "df7ba82f",
+   "id": "df791e12",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "736d95c3",
+   "id": "c347a57c",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "565de50e",
+   "id": "84a755ed",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b9ba2f",
+   "id": "94c3cb6f",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -145,13 +145,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "48a18eb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a name: Jaspreet\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_name = input('Enter a User name: ')\n",
+    "city_name = input('Enter a City name: ')\n",
+    "print ('Hi' + user_name )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "822ecfe6",
+   "id": "0f4e1c80",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "city_name = input('')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
