--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b267a767",
+   "id": "c826943b",
    "metadata": {},
    "outputs": [
     {
@@ -61,45 +61,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "af11f3e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (1152699051.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[29], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    print ('hello, ' + name + 'from ' + city '!')\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
-   "source": [
-    "name = input ('Name: ')\n",
-    "city = input ('City:')\n",
-    "print ('hello, ' + name + 'from ' + city '!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "64aaa9cc",
+   "execution_count": 31,
+   "id": "50855a3f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello, Dmitrii!\n"
+      "Name: Dmitrii\n",
+      "City: Krakow\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "name = input ('Name: ')\n",
+    "city = input ('City: ')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b79becba",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (1231302489.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[34], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print ('hello, ' name)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('hello, ' name)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c903f65f",
+   "id": "31a698d3",
    "metadata": {},
    "outputs": [],
    "source": []
