--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "002b6965",
+   "id": "9e34de6c",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "86409d64",
+   "id": "83e203bc",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6b408a60",
+   "id": "70c5690b",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "909252f1",
+   "id": "bf0e99f0",
    "metadata": {},
    "outputs": [
     {
@@ -86,22 +86,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "413ed499",
+   "id": "ac684642",
    "metadata": {},
    "outputs": [],
    "source": [
     "name= input(\"Fill in your name\")\n",
     "city= input(\"City you live in\")\n",
-    "print=(\"Welcome \" + name + \"from \")"
+    "print(\"Welcome \" + name + \"from \"+ city)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "92d3ed73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print=(\"Welcome \" + name + \"from \"+ city)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f64e5b7",
+   "id": "2e8d5323",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print"
+   ]
   }
  ],
  "metadata": {
