--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c2b6d6",
+   "id": "b24e4cc5",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "39f6db14",
+   "id": "47c0388b",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ada79eca",
+   "id": "f00cee79",
    "metadata": {},
    "outputs": [
     {
@@ -113,13 +113,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "78d9ba37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to company ABC , we are happy to have you here! Asma alnuairat from Amman\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('welcome to company ABC , we are happy to have you here! '+ name , \"from \" + city)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "37e3b29a",
+   "id": "1b8d7cdf",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p"
-   ]
+   "source": []
   }
  ],
  "metadata": {
