--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7ccbe42c",
+   "id": "667c5e95",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "524c0639",
+   "id": "a177fd1a",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "37eb1593",
+   "id": "ab73b4f2",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa3ee67",
+   "id": "7c90ceee",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a0eb680e",
+   "id": "6814f358",
    "metadata": {},
    "outputs": [
     {
@@ -87,30 +87,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "90efd933",
+   "execution_count": 12,
+   "id": "8ef7e0bf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name Przemo\n",
-      "Enter your cityZielonkia\n",
-      "Hello Przemo from Zielonkia, nice ot meet you !!!\n"
+      "Enter your name : Przemek\n",
+      "Enter your city : Krakow\n",
+      "Hello Przemek from Krakow, nice to meet you !!!\n"
      ]
     }
    ],
    "source": [
     "name = input (\"Enter your name : \")\n",
     "city = input('Enter your city : ')\n",
-    "print(\"Hello \"+name+' from '+city+', nice ot meet you !!!')"
+    "print(\"Hello \"+name+' from '+city+', nice to meet you !!!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f31dafb3",
+   "id": "c41e7a90",
    "metadata": {},
    "outputs": [],
    "source": []
