--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9bde5169",
+   "id": "a297c901",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ccff50fe",
+   "id": "f89e9bd0",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "be17364a",
+   "id": "bd9c9d0a",
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +60,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d490fff1",
+   "id": "8ca05854",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name=input (enter a name: ')\n",
-    "city=input (enter a city: ')"
+    "name=input('Enter a name: ')\n",
+    "city=nput('Enter a city: ')\n",
+    "print (name+city)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e93c4e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
