--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "47d94683",
+   "id": "e0bc3c56",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb2dfbc7",
+   "id": "c77ba75c",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c675ae61",
+   "id": "2783364f",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "58f8559c",
+   "id": "263d38b8",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "84bcd7a8",
+   "id": "036540a7",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f6271026",
+   "id": "192010d0",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c0836110",
+   "id": "45b3ce7a",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3fd3c74b",
+   "id": "6b440c6c",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6c2c70ef",
+   "id": "abe518e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bb639c54",
+   "id": "02e8713f",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d073825",
+   "id": "69b3bb33",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3346269f",
+   "id": "9b81e013",
    "metadata": {},
    "outputs": [
     {
@@ -223,29 +223,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "43e33625",
+   "execution_count": 14,
+   "id": "7b299485",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (915100608.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    print('hi, i am ' + name 'and i live in ' + city)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your nameshraddha\n",
+      "Enter your cityreading\n",
+      "hi, i am shraddhareading\n"
      ]
     }
    ],
    "source": [
-    "name = input('Enter your name')\n",
-    "city = input('Enter your city')\n",
-    "print('hi, i am ' + name 'and + city)"
+    "name = input('Enter your name: ')\n",
+    "city = input('Enter your city: ')\n",
+    "print('hi, i am' + name)\n",
+    "print ('i live in' + )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff184983",
+   "id": "c4b9eb02",
    "metadata": {},
    "outputs": [],
    "source": []
