--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "49350d19",
+   "id": "0cf88c38",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ee74cb29",
+   "id": "6a83083c",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aa0b16e5",
+   "id": "3fb203bf",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1f658f1c",
+   "id": "f84426b5",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "df791e12",
+   "id": "02c294b5",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c347a57c",
+   "id": "becf4752",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "84a755ed",
+   "id": "78a28ac4",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c3cb6f",
+   "id": "dd6ea4dd",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -145,28 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "48a18eb3",
+   "execution_count": null,
+   "id": "ac5caec4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a name: Jaspreet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "user_name = input('Enter a User name: ')\n",
     "city_name = input('Enter a City name: ')\n",
-    "print ('Hi' + user_name )"
+    "print ('Hi ' + user_name + '!' 'Welcome to ' + city_name + '.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f4e1c80",
+   "id": "fc7c3b45",
    "metadata": {},
    "outputs": [],
    "source": []
