--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c826943b",
+   "id": "00a4547d",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "50855a3f",
+   "id": "ae826369",
    "metadata": {},
    "outputs": [
     {
@@ -81,27 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "b79becba",
+   "execution_count": 41,
+   "id": "b6dcdc85",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (1231302489.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[34], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print ('hello, ' name)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Dmitrii from Krakow!\n"
      ]
     }
    ],
    "source": [
-    "print ('hello, ' name)"
+    "print ('Hello, ' + name + ' from ' + city + '!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a698d3",
+   "id": "13f54122",
    "metadata": {},
    "outputs": [],
    "source": []
