--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9e34de6c",
+   "id": "387bae82",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "83e203bc",
+   "id": "2a238ac8",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "70c5690b",
+   "id": "af7300b3",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bf0e99f0",
+   "id": "af37f7cf",
    "metadata": {},
    "outputs": [
     {
@@ -86,34 +86,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac684642",
-   "metadata": {},
+   "id": "3a2a9c3b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "name= input(\"Fill in your name\")\n",
     "city= input(\"City you live in\")\n",
-    "print(\"Welcome \" + name + \"from \"+ city)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "92d3ed73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print=(\"Welcome \" + name + \"from \"+ city)"
+    "print( \"from \"+ city)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e8d5323",
+   "id": "a7d9aea5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print"
-   ]
+   "source": []
   }
  ],
  "metadata": {
