--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a297c901",
+   "id": "85094d79",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f89e9bd0",
+   "id": "22125b62",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bd9c9d0a",
+   "id": "f4e8ab1d",
    "metadata": {},
    "outputs": [
     {
@@ -60,19 +60,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ca05854",
+   "id": "1f6421f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "name=input('Enter a name: ')\n",
-    "city=nput('Enter a city: ')\n",
+    "city=input('Enter a number: ')\n",
     "print (name+city)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93c4e8f",
+   "id": "269e60f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name= input('Enter a name: ')\n",
+    "city=input ('Enter a city: ')\n",
+    "print (name + city)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8789820c",
    "metadata": {},
    "outputs": [],
    "source": []
